// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. front lead two - portrait - 768 1`] = `
<TabletContentContainer
  orientation="portrait"
  windowWidth={750}
>
  <HorizontalLayout
    tiles={
      Array [
        Object {
          "style": undefined,
          "tile": <ExampleChild
            id="lead1"
          >
            lead1
          </ExampleChild>,
        },
        Object {
          "style": undefined,
          "tile": <ExampleChild
            id="lead2"
          >
            lead2
          </ExampleChild>,
        },
      ]
    }
  />
  <View>
    <Text>
      inTheNews
    </Text>
  </View>
</TabletContentContainer>
`;

exports[`2. front lead two - portrait - 810 1`] = `
<TabletContentContainer
  orientation="portrait"
  windowWidth={750}
>
  <HorizontalLayout
    tiles={
      Array [
        Object {
          "style": undefined,
          "tile": <ExampleChild
            id="lead1"
          >
            lead1
          </ExampleChild>,
        },
        Object {
          "style": undefined,
          "tile": <ExampleChild
            id="lead2"
          >
            lead2
          </ExampleChild>,
        },
      ]
    }
  />
  <View>
    <Text>
      inTheNews
    </Text>
  </View>
</TabletContentContainer>
`;

exports[`3. front lead two - portrait - 834 1`] = `
<TabletContentContainer
  orientation="portrait"
  windowWidth={750}
>
  <HorizontalLayout
    tiles={
      Array [
        Object {
          "style": undefined,
          "tile": <ExampleChild
            id="lead1"
          >
            lead1
          </ExampleChild>,
        },
        Object {
          "style": undefined,
          "tile": <ExampleChild
            id="lead2"
          >
            lead2
          </ExampleChild>,
        },
      ]
    }
  />
  <View>
    <Text>
      inTheNews
    </Text>
  </View>
</TabletContentContainer>
`;

exports[`4. front lead two - portrait - 1024 1`] = `
<TabletContentContainer
  orientation="portrait"
  windowWidth={750}
>
  <HorizontalLayout
    tiles={
      Array [
        Object {
          "style": undefined,
          "tile": <ExampleChild
            id="lead1"
          >
            lead1
          </ExampleChild>,
        },
        Object {
          "style": undefined,
          "tile": <ExampleChild
            id="lead2"
          >
            lead2
          </ExampleChild>,
        },
      ]
    }
  />
  <View>
    <Text>
      inTheNews
    </Text>
  </View>
</TabletContentContainer>
`;

exports[`5. front lead two - landscape - 1024 1`] = `
<TabletContentContainer
  orientation="landscape"
  windowWidth={750}
>
  <HorizontalLayout
    tiles={
      Array [
        Object {
          "style": undefined,
          "tile": <ExampleChild
            id="lead1"
          >
            lead1
          </ExampleChild>,
        },
        Object {
          "style": undefined,
          "tile": <ExampleChild
            id="lead2"
          >
            lead2
          </ExampleChild>,
        },
        Object {
          "style": undefined,
          "tile": <ExampleChild
            id="inTheNews"
          >
            inTheNews
          </ExampleChild>,
        },
      ]
    }
  />
</TabletContentContainer>
`;

exports[`6. front lead two - landscape - 1080 1`] = `
<TabletContentContainer
  orientation="landscape"
  windowWidth={750}
>
  <HorizontalLayout
    tiles={
      Array [
        Object {
          "style": undefined,
          "tile": <ExampleChild
            id="lead1"
          >
            lead1
          </ExampleChild>,
        },
        Object {
          "style": undefined,
          "tile": <ExampleChild
            id="lead2"
          >
            lead2
          </ExampleChild>,
        },
        Object {
          "style": undefined,
          "tile": <ExampleChild
            id="inTheNews"
          >
            inTheNews
          </ExampleChild>,
        },
      ]
    }
  />
</TabletContentContainer>
`;

exports[`7. front lead two - landscape - 1112 1`] = `
<TabletContentContainer
  orientation="landscape"
  windowWidth={750}
>
  <HorizontalLayout
    tiles={
      Array [
        Object {
          "style": undefined,
          "tile": <ExampleChild
            id="lead1"
          >
            lead1
          </ExampleChild>,
        },
        Object {
          "style": undefined,
          "tile": <ExampleChild
            id="lead2"
          >
            lead2
          </ExampleChild>,
        },
        Object {
          "style": undefined,
          "tile": <ExampleChild
            id="inTheNews"
          >
            inTheNews
          </ExampleChild>,
        },
      ]
    }
  />
</TabletContentContainer>
`;

exports[`8. front lead two - landscape - 1366 1`] = `
<TabletContentContainer
  orientation="landscape"
  windowWidth={750}
>
  <HorizontalLayout
    tiles={
      Array [
        Object {
          "style": undefined,
          "tile": <ExampleChild
            id="lead1"
          >
            lead1
          </ExampleChild>,
        },
        Object {
          "style": undefined,
          "tile": <ExampleChild
            id="lead2"
          >
            lead2
          </ExampleChild>,
        },
        Object {
          "style": undefined,
          "tile": <ExampleChild
            id="inTheNews"
          >
            inTheNews
          </ExampleChild>,
        },
      ]
    }
  />
</TabletContentContainer>
`;
